<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="150"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_listPlace"
        android:orderInCategory="150"
        android:title="@string/action_listPlace"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_phone"
        android:orderInCategory="150"
        android:title="@string/action_phone"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_keyboard"
        android:orderInCategory="150"
        android:title="@string/action_keyboard"
        app:showAsAction="never" />
</menu>
