<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <!--<TextView-->
        <!--android:id="@+id/tv_update_phone_name"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:text="@string/tv_phone_name" />-->

        <!--<EditText-->
        <!--android:id="@+id/et_phone_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@id/tv_update_phone_name"-->
        <!--android:layout_alignEnd="@id/tv_update_phone_name"-->
        <!--android:layout_alignRight="@id/tv_update_phone_name" />-->

        <!--<TextView-->
        <!--android:id="@+id/tv_update_phone_no"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/tv_update_phone_name"-->
        <!--android:layout_marginTop="5dp"-->
        <!--android:text="@string/tv_phone_number" />-->

        <!--<EditText-->
        <!--android:id="@+id/et_phone_no"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBaseline="@id/tv_update_phone_no"-->
        <!--android:layout_below="@+id/tv_update_phone_name"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_toEndOf="@+id/tv_update_phone_no"-->
        <!--android:inputType="phone" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_update_phone_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_phone_name" />

            <EditText
                android:id="@+id/et_phone_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_update_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_phone_number" />

            <EditText
                android:id="@+id/et_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_phone_name"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_phone_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btn_phone_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_edit" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>